Make navbar fixed on mobile devices.

--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -69,7 +69,7 @@
   }
 
   @media only screen and (max-width: 1260px) {
-    .lightning-container:nth-child(3) {
+    .lightning-container:nth-child(1) {
       display: none;
     }
   }
