--- a/src/scss/components/_timeline.scss
+++ b/src/scss/components/_timeline.scss
@@ -74,16 +74,14 @@ $nav-color: #999;
   }
 
   @media only screen and (max-width: 1060px) {
-    padding: 3% 5%;
+    padding: 5% 5%;
   }
 
-
   @media only screen and (max-width: 768px) {
-    padding-top: 5%;
+    padding-top: 35px;
   }
 
   @media only screen and (max-width: 480px) {
-    padding-top: 7%;
     font-size: 80%;
   }
 }
